<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:id="@+id/card_new_order"
    android:layout_margin="12dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_new_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card_order"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="@drawable/background_title_red"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <TextView
                android:id="@+id/lbl_title_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title_order"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/lbl_number_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/lbl_numer"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        <LinearLayout
            android:padding="8dp"
            android:background="@drawable/background_body_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lbl_title_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_address"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_method"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/metho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_sale_order"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_price_living"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_price_living"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/price_living"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_total_price"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_username_order"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_date_order"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="" />
            <TextView
                android:id="@+id/lbl_title_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_state_sale"
                android:textColor="@android:color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical|center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_stat_order"
                        android:contentDescription="@string/app_name"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/puntorx3" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lbl_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>