<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="godomicilios.mdc.restaurantego.Login"
    android:orientation="vertical"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/blueGo"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.7"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lbl_title_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/lbl_login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/lbl_username"
            android:textSize="14sp"
            android:textColorHint="@color/textBox"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:textColorHint="@color/textBox"
            android:textSize="14sp" />
        <Button
            android:id="@+id/but_validate"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_degradade"
            android:text="@string/lbl_validate"
            android:textColor="@color/cardview_shadow_start_color" />
    </LinearLayout>

</LinearLayout>
