<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/blueGoTransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_avatar_product"
                android:src="@drawable/logo_int_blue_3"
                android:contentDescription="@string/app_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".3"/>
            <TextView
                android:id="@+id/lbl_name_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/lbl_name_product"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_number_orders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_number_orders"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/lbl_number"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_number"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_drink_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_drink_order"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/txt_drink_order"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_drink_order"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_gravity="center"
                android:text="@string/lbl_ingredients"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"/>
            <LinearLayout
                android:id="@+id/layout_ingredients"
                android:orientation="horizontal"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lbl_additions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_gravity="center"
                    android:text="@string/lbl_additions"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:id="@+id/lbl_not_data"
                    android:gravity="right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/lbl_observations_order"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_additions"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_observations"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_observations_order"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/txt_observations"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_observations_order"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_subtotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_subtotal"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/txt_subtotal"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_item_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>